--- a/index.html
+++ b/index.html
@@ -4,37 +4,44 @@
   <title>API Demo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="lib/flickity.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-8" id="affdex_elements" style="width:680px;height:480px;"></div>
-      <div class="col-md-4">
-        <div style="height:25em;">
-          <strong>EMOTION TRACKING RESULTS</strong>
-          <div id="results" style="word-wrap:break-word;"></div>
-        </div>
-        <div>
-          <strong>DETECTOR LOG MSGS</strong>
-        </div>
+    <div class="affectiva">
+      <div class="video" id="affdex_elements" style="width:320px;height:240px;"></div>
+      <div class="em-results">
+        <strong>EMOTION TRACKING RESULTS</strong>
+        <div id="results" style="word-wrap:break-word;"></div>
+      </div>
+      <div class="em-logs">
+        <strong>DETECTOR LOG MSGS</strong>
         <div id="logs"></div>
+        <div class="buttons">
+          <button id="start" onclick="onStart()">Start</button>
+          <button id="stop" onclick="onStop()">Stop</button>
+          <button id="reset" onclick="onReset()">Reset</button>
+        </div>
       </div>
     </div>
-    <div>
-      <button id="start" onclick="onStart()">Start</button>
-      <button id="stop" onclick="onStop()">Stop</button>
-      <button id="reset" onclick="onReset()">Reset</button>
-      <h3>Affectiva JS SDK CameraDetector to track different emotions.</h3>
-      <p>
-        <strong>Instructions</strong>
-        </br>
-        Press the start button to start the detector.
-        <br/> When a face is detected, the probabilities of the different emotions are written to the DOM.
-        <br/> Press the stop button to end the detector.
-      </p>
+
+    <div class="carousel" id="carousel">
+      <div class="carousel-cell" id="">
+        start
+      </div>
+      <div class="carousel-cell" id="">
+        weiter
+      </div>
+      <div class="carousel-cell" id="">
+        ende
+      </div>
     </div>
+
+
   </div>
   <script src='lib/jquery.min.js'></script>
+  <script src='lib/flickity.pkgd.min.js'></script>
   <script src='lib/affdex.js'></script>
   <script src="script.js"></script>
 </body>
