record on mousedown

--- a/index.html
+++ b/index.html
@@ -20,18 +20,27 @@
         <div id="logs"></div>
         <div class="buttons">
           <button id="start" onclick="onStart()">Start</button>
+          <button id="record">Record</button>
           <button id="stop" onclick="onStop()">Stop</button>
-          <button id="reset" onclick="onReset()">Reset</button>
         </div>
       </div>
     </div>
 
     <div class="carousel" id="carousel">
       <div class="carousel-cell" id="">
-        start
+        <h1>
+          Welcome!
+        </h1>
+        <p>
+          Please enter your name.
+        </p>
+        <input type="text">
       </div>
       <div class="carousel-cell" id="">
-        weiter
+        <h2 class="slide-header">
+          Now smile!
+        </h2>
+        <img class="center" src="img/happy.jpg">
       </div>
       <div class="carousel-cell" id="">
         ende
