[ui] move video to left

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
   <div class="container-fluid">
     <div class="affectiva">
       <div class="video" id="affdex_elements"></div>
-      <div class="em-results">
-        <div id="results" style="word-wrap:break-word;"></div>
-      </div>
-      <div class="em-logs">
-        <div class="buttons">
-          <button id="start" onclick="onStart()">Start</button>
-          <button id="record">Record</button>
-          <button id="stop" onclick="onStop()">Stop</button>
+      <div class="right">
+        <div class="em-results">
+          <div id="results" style="word-wrap:break-word;"></div>
         </div>
-        <div id="logs"></div>
+        <div class="em-logs">
+          <div class="buttons">
+            <button id="start" onclick="onStart()">Start</button>
+            <button id="record">Record</button>
+            <button id="stop" onclick="onStop()">Stop</button>
+          </div>
+          <div id="logs"></div>
+        </div>
       </div>
     </div>
 
