[data] add new dataset

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>API Demo</title>
+  <title>Emoji Experiment</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="lib/flickity.css" rel="stylesheet" type="text/css" />
